--- a/project/myuser/templates/student_list.html
+++ b/project/myuser/templates/student_list.html
@@ -2,11 +2,11 @@
 
 	{% for obj in students %}
  
-
-			<p> {{ obj.last_name}} {{ obj.first_name}}</p>
+			<h4><a href='{% url "myuser:grade" obj.last_name%}?q={{ obj.last_name}} {{ obj.first_name}}'>{{ obj }}</a></h4>
+			<p> </p>
 			
 		
 
 	{% endfor %}	
  
- 	{% endblock %}
+ 	{% endblock %} 
