--- a/project/myuser/templates/student_list.html
+++ b/project/myuser/templates/student_list.html
@@ -1,14 +1,16 @@
 {% block content %} 
 
-	{% for obj in students %}
 	
- 	 		<p><img src="{{  obj.MEDIA_URL }}{{ obj.Student_profile.url}}" width="200px"></p>
- 			<h3><a href=''>{{ obj.user.first_name }} {{ obj.user.last_name }}</a></h3>
+	{% for obj in students %}
+
+ 	 		<p><img src="{{  obj.MEDIA_URL }}{{obj.Student_profile.url}}" width="200px"></p>
+ 			<h3><a href=''>{{  obj.first_name }} {{ obj.last_name }}</a></h3>
+
 	
 			<p> </p>
 			
-		
 
 	{% endfor %}	
+	
  
  	{% endblock %} 
