--- a/project/myuser/templates/student_list.html
+++ b/project/myuser/templates/student_list.html
@@ -4,7 +4,7 @@
 	{% for obj in students %}
 
  	 		<p><img src="{{  obj.MEDIA_URL }}{{obj.Student_profile.url}}" width="200px"></p>
- 			<h3><a href=''>{{  obj.first_name }} {{ obj.last_name }}</a></h3>
+ 			<h3><a href='{% url "grade:detail" last_name=obj.last_name %}'>{{  obj.first_name }} {{ obj.last_name }}</a></h3>
 
 	
 			<p> </p>
@@ -13,4 +13,4 @@
 	{% endfor %}	
 	
  
- 	{% endblock %} 
+ 	{% endblock %}
