--- a/project/templates/static/css/style.css
+++ b/project/templates/static/css/style.css
@@ -37,7 +37,7 @@ body {
   color: #FFF;
   margin:auto;
   /*background-image: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)), url(img/);*/
-  background-image: url(bg-latest-news-events.jpg);
+  background-image: url(img/2.png);
   background-repeat: no-repeat;
   display: table;
   top:0;
