--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -11,9 +11,11 @@
 		<div class="cover-container">          
 		
 		<main role="main" class="inner cover">
-			<h1 class="cover-heading">Cover your page.</h1>
-			<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-			<p class="lead">
+			<div class="transbox">
+						<h3>One more for good measure.</h3>
+							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+									</div>
+									<br></br><br>
 			<a href='{% url "login" %}' class="btn btn-lg btn-secondary">Sign-in</a>
 			</p>
 		</main>
