--- a/project/templates/static/css/styles.css
+++ b/project/templates/static/css/styles.css
@@ -4,6 +4,12 @@
 
 /* Links */
 
+div.transbox p,h3 {
+  margin: 5%;
+  font-weight: bold;
+  color: #000000;
+}
+
 .w3-card, .w3-card-2 {
     box-shadow: inset 1px 0px 20px 20px rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
     height: 560px;
