--- a/project/templates/static/css/styles.css
+++ b/project/templates/static/css/styles.css
@@ -3,7 +3,53 @@
  */
 
 /* Links */
+.card {
+    background-color: green;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 350px;
+    margin: auto;
+    transition: 0.3s;
+    border-radius: 10px;
+    text-shadow: 0 .05rem .1rem rgba(15, 2, 2, 0.92);
 
+}
+
+#myImg {
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+    height: 240.95px;
+    width: 320.75px;
+}
+
+.title {
+    color: green;
+    font-size: 18px;
+}
+
+button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #E59494;
+    text-align: center;
+    cursor: pointer;
+    margin-top: 20px 
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+}
+
+button:hover, a:hover {
+    opacity: 0.7;
+}
 div.transbox p,h3 {
   margin: 5%;
   font-weight: bold;
@@ -57,15 +103,9 @@ body {
 }
 body {
   color: #fff;
-  text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
-body{
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-}
 
 .cards{
   background-color: #14121266;
