--- a/project/templates/static/css/styles.css
+++ b/project/templates/static/css/styles.css
@@ -50,6 +50,12 @@ a {
 button:hover, a:hover {
     opacity: 0.7;
 }
+/*
+ * Globals
+ */
+
+/* Links */
+
 div.transbox p,h3 {
   margin: 5%;
   font-weight: bold;
@@ -103,9 +109,15 @@ body {
 }
 body {
   color: #fff;
+  text-align: center;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
+body{
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+}
 
 .cards{
   background-color: #14121266;
