--- a/project/myuser/templates/Grade.html
+++ b/project/myuser/templates/Grade.html
@@ -17,11 +17,17 @@
 <br></br>
 <br></br>
 
-<br></br>
+
 
 <div class="bg"></div>
+
+<br></br>
+<div class="card">
  	 		<p><img src="{{  myuser.MEDIA_URL }}{{myuser.Student_profile.url}}" width="200px"></p>
  			<h3><a href=>{{  myuser.first_name }} {{ myuser.last_name }}</a></h3>
+ 		</div>
+<br></br>
+
   <div class="panel-group" id="accordion">
   	 <div class="col-md-4" style="margin-bottom:20px">
     <div class="panel panel-default">
@@ -36,7 +42,7 @@
         	{% for tri in myuser.grade_set.all %}
 				{% if tri.trinal %}
  				{% if tri %}
-				<h1>{{  tri.subject.subject_name }}: {{  tri.quiz }}</h1>
+				<p>{{  tri.subject.subject_name }}: {{  tri.quiz }}</p>
 				{% else %}
 					<p class='lead'>No midterm</p>
 				{% endif %}
@@ -99,6 +105,8 @@
   </div> 
 </div>
 </html>
+</div>
+</div>
 </body>
  {% endblock content %}
  	
