--- a/project/templates/forms/signup.html
+++ b/project/templates/forms/signup.html
@@ -2,6 +2,6 @@
 {% block content %}
   <h2>Sign up for a free account</h2>
   <p class="lead">Select below the type of account you want to create</p>
-  <a href="{% url 'student_signup' %}" class="btn btn-student btn-lg" role="button">I'm a student</a>
-  <a href="{% url 'faculty_signup' %}" class="btn btn-teacher btn-lg" role="button">I'm a teacher</a>
+  <a href="{% url 'myuser:student' %}" class="btn btn-student btn-lg" role="button">I'm a student</a>
+  <a href="{% url 'myuser:faculty' %}" class="btn btn-teacher btn-lg" role="button">I'm a teacher</a>
 {% endblock %}
