--- a/project/templates/forms/signup_form.html
+++ b/project/templates/forms/signup_form.html
@@ -1,8 +1,9 @@
+
 {% load crispy_forms_tags %}
 
 {% block content %}
   <div class="row">
-    <div class="col-md-8 col-sm-10 col-12">
+    <div class="col-md-8 col-sm-20 col-12">
       <h2>Sign up as a {{ user_type }}</h2>
       <form method="post" novalidate>
         {% csrf_token %}
@@ -11,5 +12,6 @@
         <button type="submit" class="btn btn-success">Sign up</button>
       </form>
     </div>
-  </div>s
+  </div>
 {% endblock %}
+
