--- a/project/myuser/templates/Grade.html
+++ b/project/myuser/templates/Grade.html
@@ -24,7 +24,7 @@
 <br></br>
 <div class="card">
  	 		<p><img src="{{  myuser.MEDIA_URL }}{{myuser.Student_profile.url}}" width="200px"></p>
- 			<h3><a href=>{{  myuser.first_name }} {{ myuser.last_name }}</a></h3>
+ 			<h3><a href='{{ myuser.get_absolute_url }}'>{{  myuser.first_name }} {{ myuser.last_name }}</a></h3>
  		</div>
 <br></br>
 	{% include 'snippets/nav.html'%}
