--- a/project/templates/forms/update_form.html
+++ b/project/templates/forms/update_form.html
@@ -1,10 +1,14 @@
 {% load crispy_forms_tags %}
-
+{% load staticfiles %}
+   <link rel="stylesheet" href="{% static 'css/cards.css' %}">
 {% block content %}
-  <h2 class="mb-3">Update your interests</h2>
+  <h2 class="mb-3">Sudents Update</h2>
+<div class="card">
   <form method="post" novalidate>
     {% csrf_token %}
     {{ form|crispy }}
+    <br></br>
     <button type="submit" class="btn btn-success">Save changes</button>
   </form>
+</div>
 {% endblock %}
