--- a/project/myuser/templates/Grade.html
+++ b/project/myuser/templates/Grade.html
@@ -16,7 +16,8 @@
 <br></br>
 <br></br>
 <br></br>
-
+<br></br>
+<br></br>
 
 
 <div class="bg"></div>
@@ -27,7 +28,7 @@
  			<h3><a href='{% url "myuser:edit" last_name=myuser.last_name %}'>{{  myuser.first_name }} {{ myuser.last_name }}</a></h3>
  		</div>
 <br></br>
-	{% include 'snippets/nav.html'%}
+	<div>{% include 'snippets/nav.html'%}</div>
 
   <div class="panel-group" id="accordion">
   	 <div class="col-md-4" style="margin-bottom:20px">
