--- a/project/templates/static/css/image.css
+++ b/project/templates/static/css/image.css
@@ -7,7 +7,7 @@ body, html {
 html,
 body{
     /* The image used */
-  background-image: url(img/2.png);
+  background-image: url(img/ndmc.png);
 
     /* Full height */
     height: 10%; 
