--- a/project/templates/forms/grade-create.html
+++ b/project/templates/forms/grade-create.html
@@ -2,18 +2,68 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+ 
+
+  <div class="container py-5">
   <div class="row">
-    <div class="col-md-8 col-sm-20 col-12">
-      <h2>Sign up as a {{ user_type }}</h2>
-      {% if user.is_faculty %}
-      <form method="post" novalidate>
-        {% csrf_token %}
-        <input type="hidden" name="next" value="{{ next }}">
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-success">Sign up</button>
-      </form>
-      {% endif %}
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                    <span class="anchor" id="formLogin"></span>
+
+                    <!-- form card login -->
+                    <div class="cards card rounded-1">
+                        <div class="card-header">
+                            <h3 class="mb-0">Sign-up</h3>
+                        </div>
+                        <div class="card-body">
+             {% csrf_token %}
+   
+              <div class="form-group">
+                <label for="inputEmail3">{{form.user.label}}</label>
+                {{ form.user }}
+              </div>
+              <div class="form-group">
+                             {{form.First_year_Grade}}
+                <label for="inputName">{{form.First_year_Grade.label}}</label>
+   
+                 <div class="form-group">
+                             {{form.Second_year_Grade}}
+                <label for="inputName">{{form.Second_year_Grade.label}}</label>
+   
+                 <div class="form-group">
+                             {{form.Third_year_Grade}}
+                <label for="inputName">{{form.Third_year_Grade.label}}</label>
+   
+                 <div class="form-group">
+                             {{form.Fourth_year_Grade}}
+                <label for="inputName">{{form.Fourth_year_Grade.label}}</label>
+   
+              </div>
+              <div class="form-group">
+                <label for="inputName">{{form.last_name.label}}</label>
+              {{form.last_name}}
+              </div>
+              <div class="form-group">
+                <label for="inputPassword3">{{form.password1.label}}</label>
+                {{form.password1}}
+              </div>
+              <div class="form-group">
+                <label for="inputVerify3">Verify</label>
+                {{form.password2}}
+              </div>
+              <button type="submit" class="btn btn-success btn-lg float-center" value="{{ next }}">Register</button>
+                            </form>
+                        </div>
+                        <!--/card-block-->
+                    </div>
+                    <!-- /form card login -->
+                </div>
+            </div>
+            <!--/row-->
+        </div>
+        <!--/col-->
     </div>
-  </div>
+    <!--/row-->
 {% endblock %}
 
