--- a/project/templates/forms/grade-create.html
+++ b/project/templates/forms/grade-create.html
@@ -19,40 +19,72 @@
                         <div class="card-body">
              {% csrf_token %}
    
-              <div class="form-group">
-                <label for="inputEmail3">{{form.user.label}}</label>
+             <p><div class="form-group">
+                <label for="inputuser">{{form.user.label}}</label>
                 {{ form.user }}
-              </div>
-              <div class="form-group">
+              </div></p>
+              <div>
+                  <p><div class="form-group">
                              {{form.First_year_Grade}}
-                <label for="inputName">{{form.First_year_Grade.label}}</label>
+                    <label for="inputFirst_year_Grade">{{form.First_year_Grade.label}}</label>
+                  </div></p>
    
-                 <div class="form-group">
+                    <p><div class="form-group">
                              {{form.Second_year_Grade}}
-                <label for="inputName">{{form.Second_year_Grade.label}}</label>
-   
-                 <div class="form-group">
+                    <label for="inputSecond_year_Grade">{{form.Second_year_Grade.label}}</label>
+                    </div></p>
+                   <p> <div class="form-group">
                              {{form.Third_year_Grade}}
-                <label for="inputName">{{form.Third_year_Grade.label}}</label>
-   
-                 <div class="form-group">
+                    <label for="Third_year_Grade">{{form.Third_year_Grade.label}}</label>
+                    </div></p>
+                    <p><div class="form-group">
                              {{form.Fourth_year_Grade}}
-                <label for="inputName">{{form.Fourth_year_Grade.label}}</label>
-   
+                  <label for="inputFourth_year_Grade">{{form.Fourth_year_Grade.label}}</label>
+              </div></p>
               </div>
-              <div class="form-group">
-                <label for="inputName">{{form.last_name.label}}</label>
-              {{form.last_name}}
+             <p> <div class="form-group">
+                <label for="inputsubject">{{form.subject.label}}</label>
+              {{form.subject}}
+              </div></p>
+             <p> <div class="form-group">
+                <label for="inputprofessor">{{form.professor.label}}</label>
+                {{form.professor}}
+              </div></p>
+
+                    <p><div class="form-group">
+                             {{form.First_Sem}}
+                    <label for="inputName">{{form.First_Sem.label}}</label>
+                  </div></p>
+
+                    <p><div class="form-group">
+                             {{form.Second_Sem}}
+                    <label for="inputFirst_Sem">{{form.Second_Sem.label}}</label>
+                  </div></p>
+                            <div class="form-group">
+                <label for="inputPassword3"><span>{{form.quiz.label}}</span></label>
+                {{form.quiz}}
               </div>
-              <div class="form-group">
-                <label for="inputPassword3">{{form.password1.label}}</label>
-                {{form.password1}}
-              </div>
-              <div class="form-group">
-                <label for="inputVerify3">Verify</label>
-                {{form.password2}}
-              </div>
-              <button type="submit" class="btn btn-success btn-lg float-center" value="{{ next }}">Register</button>
+                          <p>  <div class="form-group">
+                <label for="inputperformance">{{form.performance.label}}</label>
+                {{form.performance}}
+              </div></p>
+                            <p><div class="form-group">
+                <label for="inputPassword3">{{form.exam.label}}</label>
+                {{form.exam }}
+              </div></p>
+                  <p> <div class="form-group">
+                             {{form.trinal}}
+                    <label for="inputSecond_year_Grade">{{form.trinal.label}}</label>
+                    </div></p>
+                   <p> <div class="form-group">
+                             {{form.midterm}}
+                    <label for="Third_year_Grade">{{form.midterm.label}}</label>
+                    </div></p>
+                  <p> <div class="form-group">
+                             {{form.Final }}
+                  <label for="inputFourth_year_Grade">{{form.Final.label}}</label>
+              </div></p>
+        <button type="submit" class="btn btn-success">Sign up</button>
                             </form>
                         </div>
                         <!--/card-block-->
