--- a/project/templates/forms/grade-create.html
+++ b/project/templates/forms/grade-create.html
@@ -2,6 +2,16 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<head>
+
+  {% load staticfiles %}
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+   <link rel="stylesheet" href="{% static 'css/cards.css' %}">
+ 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
  
 
   <div class="container py-5">
@@ -23,7 +33,8 @@
                 <label for="inputuser">{{form.user.label}}</label>
                 {{ form.user }}
               </div></p>
-              <div>
+           
+                <div class="card">
                   <p><div class="form-group">
                              {{form.First_year_Grade}}
                     <label for="inputFirst_year_Grade">{{form.First_year_Grade.label}}</label>
