grade teplate View

--- a/project/myuser/templates/Grade2.html
+++ b/project/myuser/templates/Grade2.html
@@ -36,7 +36,7 @@
  {% include 'snippets/nav.html'%} 
 {% for grade in myuser.grade_set.all %}
 
-    <p>First Year Record</p>
+    <p>Second Year Record</p>
     <br></br>
     <p>First Sem Record</p>
 
