--- a/project/myuser/templates/student_list.html
+++ b/project/myuser/templates/student_list.html
@@ -7,7 +7,7 @@
 
 
  	 		<p><img src="{{  obj.MEDIA_URL }}{{obj.Student_profile.url}}" width="200px"></p>
- 			<h3><a href='{% url "grade:detail" last_name=obj.last_name %}'>{{  obj.first_name }} {{ obj.last_name }}</a></h3>
+ 			<h3><a href='{% url "grade:detail1" last_name=obj.last_name %}'>{{  obj.first_name }} {{ obj.last_name }}</a></h3>
 
 	
 			<p> </p>
