--- a/project/myuser/templates/Grade2.html
+++ b/project/myuser/templates/Grade2.html
@@ -46,10 +46,10 @@
      
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" align="center" ><p allign="center">Trinal</p></a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" align="center" ><p allign="center">Trinal</p></a>
         </h4>
       </div>
-      <div id="collapse2" class="panel-collapse collapse in">
+      <div id="collapse" class="panel-collapse collapse in">
         <div class="panel-body">  
      
           {% if grade.First_year_Grade %}
@@ -75,10 +75,10 @@
      
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" align="center" ><p allign="center">Midterm</p></a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse4" align="center" ><p allign="center">Midterm</p></a>
         </h4>
       </div>
-      <div id="collapse2" class="panel-collapse collapse in">
+      <div id="collapse4" class="panel-collapse collapse in">
         <div class="panel-body"> 
  
    
@@ -107,10 +107,10 @@
      
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse3" align="center" ><p allign="center">Final</p></a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse5" align="center" ><p allign="center">Final</p></a>
         </h4>
       </div>
-      <div id="collapse3" class="panel-collapse collapse in">
+      <div id="collapse5" class="panel-collapse collapse in">
         <div class="panel-body"> 
  
           {% if grade.First_year_Grade %}
@@ -141,10 +141,10 @@
      
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" align="center" ><p allign="center">Trinal</p></a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse6" align="center" ><p allign="center">Trinal</p></a>
         </h4>
       </div>
-      <div id="collapse2" class="panel-collapse collapse in">
+      <div id="collapse6" class="panel-collapse collapse in">
         <div class="panel-body">  
  
  
@@ -172,10 +172,10 @@
      
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" align="center" ><p allign="center">Midterm</p></a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse7" align="center" ><p allign="center">Midterm</p></a>
         </h4>
       </div>
-      <div id="collapse2" class="panel-collapse collapse in">
+      <div id="collapse7" class="panel-collapse collapse in">
         <div class="panel-body">  
  
  
@@ -203,10 +203,10 @@
      
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse2" align="center" ><p allign="center">Midterm</p></a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse8" align="center" ><p allign="center">Midterm</p></a>
         </h4>
       </div>
-      <div id="collapse2" class="panel-collapse collapse in">
+      <div id="collapse8" class="panel-collapse collapse in">
         <div class="panel-body">  
  
   
