--- a/project/myuser/templates/student_list.html
+++ b/project/myuser/templates/student_list.html
@@ -1,28 +1,62 @@
 {% extends "base.html" %} 
 
 {% block content %} 
+{% load staticfiles %}
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/image.css' %}">
+<link rel="stylesheet" href="{% static 'css/card.css' %}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-	
+
+<body>
+<div class="bg"></div>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+	<br></br>
+		<br></br>
+
+ {% include 'snippets/nav.html'%} 
+	<br></br>
+
 	{% for obj in students %}
 
-
+<div class="col-md-4" style="margin-bottom:20px	margin-right: 104px;
+	margin-top: 10px;">
+	<div class="card" >
  	 		<p><img src="{{  obj.MEDIA_URL }}{{obj.Student_profile.url}}" width="200px"></p>
- 			<h3><a href='{% url "grade:detail1" last_name=obj.last_name %}'>{{  obj.first_name }} {{ obj.last_name }}</a></h3>
+ 			<h3><a href="/grades/student/Year/">{{  obj.first_name }} {{ obj.last_name }}</a></h3>
+ 			<p>{{obj.course}}-{{obj.Year}}</p>
 
-	
+{% for grade in obj.grade_set.all %} 			
+{% if grade.First_year_Grade %}
+  <p><li><a href='{% url "grade:detail1" last_name=obj.last_name %}'   role="button">First Year Record</a></li></p>
+  {% endif %}
+  {% if grade.Second_year_Grade %}
+  <ui> <p><a href='{% url "grade:detail2" last_name=obj.last_name %}'   role="button">Second Year Record</a></p></ui>
+ {% endif %}
+   {% if grade.Third_year_Grade %}
+   <ui> <p><a href='{% url "grade:detail3" last_name=obj.last_name  %}'   role="button">Third Year Record</a></p></ui>
+  {% endif %}
+     {% if grade.Fourth_year_Grade %}
+  <ui>  <p><a href='{% url "grade:detail4" last_name=obj.last_name  %}'   role="button">Fourth Year Record</a></p></ui>
+   {% endif %}
+	 		</div>
+</div>
 			<p> </p>
-			
+			{% endfor %}	
 
 	{% endfor %}	
 	
-<ul class="sidebar-nav">
-   {% if user.is_authenticated %}
-   <li>User:Welcome {{ user.get_username }}</li>
-  
-   {% else %}
-   <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>   
-   {% endif %} 
- </ul>
-
+ 
  
  	{% endblock %}
+ 	</body>
